# dedcoin

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
build-aux/m4/: bitcoin_qt.m4  dedcoin_experimental.m4  dedcoin_find_bdb53.m4
contrib/: README.md  dedcoind.bash-completion  gitian-build.sh  install_db5.sh
contrib/debian/: README.md  control  copyright  dedcoin-qt.desktop  dedcoin-qt.install  dedcoin-qt.lintian-overrides  dedcoin-qt.manpages  dedcoin-qt.protocol  dedcoin-tx.bash-completion  dedcoin-tx.install  dedcoin-tx.manpages  dedcoind.bash-completion  dedcoind.examples  dedcoind.install  dedcoind.lintian-overrides  dedcoind.manpages  rules  watch
contrib/devtools/: check-translations.py  copyright_header.py  gen-dedcoin-conf.sh  gen-manpages.sh  security-check.py  symbol-check.py  test-security-check.py  test-symbol-check.py  utils.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  dedcoin.conf  dedcoin.init  dedcoind.local.service  dedcoind.openrc  dedcoind.openrcconf  dedcoind.opt.service  dedcoind.service  org.dedcoin.dedcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
depends/: Makefile  funcs.mk
doc/: Doxyfile  FAQ.md  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-archlinux.md  build-macos.md  build-nixos.md  build-openbsd.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  experiments.md  fee-recommendation.md  files.md  fuzzing.md  getting-started.md  gitian-building.md  init.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  rpc-maturity.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.md  zmq.md
qa/: README.md
share/: dogecoin.conf  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  auxpow.cpp  auxpow.h  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  dedcoin-fees.cpp  dedcoin-fees.h  dedcoin.cpp  dedcoin.h  hash.cpp  hash.h  httpserver.cpp  init.cpp  init.h  key.cpp  (+58 more)
src/bench/: ccoins_caching.cpp  coin_selection.cpp  crypto_hash.cpp
src/compat/: arm_acle_selector.h  glibc_compat.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: hmac_sha256.h  scrypt.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  pureheader.cpp  pureheader.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  modaloverlay.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentserver.cpp  paymentserver.h  peerdialog.cpp  peerdialog.h  peertablemodel.cpp  peertablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  (+17 more)
src/qt/forms/: coincontroldialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ku_IQ.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mk_MK.ts  bitcoin_mn.ts  bitcoin_ms_MY.ts  (+24 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: paymentservertests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/examples/: ecdsa.c
src/support/: cleanse.cpp  cleanse.h  experimental.h  lockedpool.cpp
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  addrman_tests.cpp  amount_tests.cpp  auxpow_tests.cpp  compress_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  dedcoin_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  scriptnum10.h  scrypt_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  versionbits_tests.cpp
src/test/data/: bitcoin-util-test.json  script_tests.json
src/wallet/: coincontrol.h  db.cpp  db.h  rpcdump.cpp  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqpublishnotifier.cpp
(+124 files in other folders)
